finished mobile view

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a href="#">Vision</a>
           <a href="#">Features</a>
           <a href="#">About</a>
-          <a href="#">Contact</a>
+          <a id="contact" href="#">Contact</a>
         </nav>
 
           <img class="logo" src="https://raw.githubusercontent.com/JaySebagh/User-Interface/master/great-idea-website/img/logo.png" alt="Great Idea! Company logo.">
